dist_man1_MANS=

if BUILD_BITCOINRELOADEDD
  dist_man1_MANS+=bitcoinreloadedd.1
endif

if ENABLE_QT
  dist_man1_MANS+=bitcoinreloaded-qt.1
endif

if BUILD_BITCOINRELOADED_CLI
  dist_man1_MANS+=bitcoinreloaded-cli.1
endif

if BUILD_BITCOINRELOADED_TX
  dist_man1_MANS+=bitcoinreloaded-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOINRELOADED_WALLET
  dist_man1_MANS+=bitcoinreloaded-wallet.1
endif
endif
